--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
 # ----------------------
 # Flask
 # ----------------------
-flask
+Flask==0.9
 
 
 # ----------------------
 # Testing
 # ----------------------
-mock
+mock==1.0.1
 
 
 # ----------------------
 # Production Server
 # ----------------------
-gevent
-gunicorn
+gevent==0.13.8
+gunicorn==0.17.2
+
+## The following requirements were added by pip --freeze:
+Jinja2==2.6
+Werkzeug==0.8.3
+argparse==1.2.1
+distribute==0.6.34
+greenlet==0.4.0
+wsgiref==0.1.2
