--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,14 @@ mock==1.0.1
 gevent==0.13.8
 gunicorn==0.17.2
 
+# API
+Flask-RESTful==0.2.1
+
 ## The following requirements were added by pip --freeze:
 Jinja2==2.6
 Werkzeug==0.8.3
 argparse==1.2.1
 distribute==0.6.34
 greenlet==0.4.0
+pycrypto==2.6
 wsgiref==0.1.2
